--- a/MathVectorCharts_MVP/MathVectorCharts_MVP.csproj
+++ b/MathVectorCharts_MVP/MathVectorCharts_MVP.csproj
@@ -56,20 +56,21 @@
     <Compile Include="Exceptions\ImpossibleCalculateMeanVectorException.cs" />
     <Compile Include="Exceptions\InvalidFileContentException.cs" />
     <Compile Include="Exceptions\NotExsistFileException.cs" />
+    <Compile Include="Presenters\IPresenter.cs" />
     <Compile Include="ViewModels\BarChartInfo.cs" />
     <Compile Include="Tools\Parsers\AbstractParser.cs" />
     <Compile Include="Tools\Parsers\CsvParser.cs" />
     <Compile Include="Tools\Parsers\Interfaces\ICsvParser.cs" />
     <Compile Include="Tools\Parsers\Interfaces\IParser.cs" />
-    <Compile Include="UI\ChartsUI\ChartsService.cs" />
-    <Compile Include="UI\ChartsUI\ChartsPresenter.cs" />
-    <Compile Include="UI\ChartsUI\IChartsService.cs" />
-    <Compile Include="UI\ChartsUI\IChartsView.cs" />
-    <Compile Include="UI\IView.cs" />
-    <Compile Include="View.cs">
+    <Compile Include="Services\ChartsService.cs" />
+    <Compile Include="Presenters\IrisesAnalysisPresenter.cs" />
+    <Compile Include="Services\IChartsService.cs" />
+    <Compile Include="Views\IIrisesAnalysisView.cs" />
+    <Compile Include="Views\IView.cs" />
+    <Compile Include="Views\View.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View.Designer.cs">
+    <Compile Include="Views\View.Designer.cs">
       <DependentUpon>View.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\ConcreteTypeIrisDataSet.cs" />
@@ -77,7 +78,9 @@
     <Compile Include="Models\IrisesDataSet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\BarOfChartInfo.cs" />
     <Compile Include="ViewModels\PieChartInfo.cs" />
+    <Compile Include="ViewModels\PieOfChartInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -87,7 +90,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="View.resx">
+    <EmbeddedResource Include="Views\View.resx">
       <DependentUpon>View.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
