--- a/MathVectorCharts_MVP/MathVectorCharts_MVP.csproj
+++ b/MathVectorCharts_MVP/MathVectorCharts_MVP.csproj
@@ -59,18 +59,18 @@
     <Compile Include="Exceptions\UnknowClusteringAlgorithm.cs" />
     <Compile Include="Presenters\ClusterAnalysisPresenter.cs" />
     <Compile Include="Presenters\IPresenters\IPresenter.cs" />
-    <Compile Include="Services\ClusteringService.cs" />
-    <Compile Include="Services\IServices\IClusteringService.cs" />
+    <Compile Include="Services %28Models%29\ClusteringService.cs" />
+    <Compile Include="Services %28Models%29\IServices\IClusteringService.cs" />
     <Compile Include="Tools\Parsers\Interfaces\ITxtParser.cs" />
     <Compile Include="Tools\Parsers\TxtParser.cs" />
-    <Compile Include="ViewModels\BarChartInfo.cs" />
+    <Compile Include="Entites\BarChartInfo.cs" />
     <Compile Include="Tools\Parsers\AbstractParser.cs" />
     <Compile Include="Tools\Parsers\CsvParser.cs" />
     <Compile Include="Tools\Parsers\Interfaces\ICsvParser.cs" />
     <Compile Include="Tools\Parsers\Interfaces\IParser.cs" />
-    <Compile Include="Services\ChartsService.cs" />
+    <Compile Include="Services %28Models%29\ChartsService.cs" />
     <Compile Include="Presenters\IrisesAnalysisPresenter.cs" />
-    <Compile Include="Services\IServices\IChartsService.cs" />
+    <Compile Include="Services %28Models%29\IServices\IChartsService.cs" />
     <Compile Include="Views\ClusterAnalysisView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,14 +86,14 @@
     <Compile Include="Views\IrisesAnalysisView.Designer.cs">
       <DependentUpon>IrisesAnalysisView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\ConcreteTypeIrisDataSet.cs" />
-    <Compile Include="Models\Iris.cs" />
-    <Compile Include="Models\IrisesDataSet.cs" />
+    <Compile Include="Entites\ConcreteTypeIrisDataSet.cs" />
+    <Compile Include="Entites\Iris.cs" />
+    <Compile Include="Entites\IrisesDataSet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\BarOfChartInfo.cs" />
-    <Compile Include="ViewModels\PieChartInfo.cs" />
-    <Compile Include="ViewModels\PieOfChartInfo.cs" />
+    <Compile Include="Entites\BarOfChartInfo.cs" />
+    <Compile Include="Entites\PieChartInfo.cs" />
+    <Compile Include="Entites\PieOfChartInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
